# CHSU_ML

HW1/: [homework]simple_embeddings.ipynb
HW2/: hw_text_classification (2).ipynb  hw_text_classification.ipynb
HW2/hw2_v2/: Cargo.toml
HW2/hw2_v2/src/: inference.rs  lib.rs  main.rs  model.rs  training.rs
HW2/hw2_v2/src/data_processing/: batcher.rs  dataset.rs  mod.rs  tokenizer.rs
HW3/: hw_language_modelling.ipynb
HW4/: data_problems.xlsx  hw_attention_and_transformers.ipynb
LABA1/: Лабораторная_работа_1_Основы_PyTorch.ipynb
LABA2/: fcn_1.pkl  fcn_1.pth  Лабораторная_работа_2_Полносвязные_нейронные_сети_на_PyTorch.ipynb
LABA3/: simple_cnn.pth  Лабораторная_работа_3_СNN_для_классификации_изображений_ipynb_.ipynb
LABA6/: Лабораторная_работа_6_Оценка_положения_объектов.ipynb
