[package]
name = "hw2_v2"
version = "0.1.0"
edition = "2021"

[features]
default = ["burn/dataset", "burn/sqlite-bundled"]
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]


[dependencies]
burn = { version = "0.12.1", features = ["train", "wgpu", "ndarray", "fusion"] }
tokenizers = { version = "0.15.2", default-features = false, features = ["onig", "http"] }